--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,76 +2,86 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3f70bb0f-03dc-4b1c-969a-a9bc6923ea88",
+   "id": "707e346f-7e9c-4074-a9ca-420050682348",
    "metadata": {},
    "source": [
-    " Data Science Tools and Ecosystem"
+    "# Data Science Tools and Ecosystem"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "06b8b23c-d5d2-4947-a689-5bf76adcaf93",
+   "id": "44e2f9ef-b232-451e-aa77-3db2f4871c8d",
    "metadata": {},
    "source": [
-    "In this notebook, Data Science Tools and Ecosystem are summarized"
+    "In this notebook, Data Science Tools and Ecosystem are summarized."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9576bc52-ec78-4eef-83c7-d48d09a98441",
+   "id": "46c43ab6-2793-4276-98b3-ea82cf599c5d",
+   "metadata": {},
+   "source": [
+    "Some of the popular languages that Data Scientists use are:\n",
+    "1. Python\n",
+    "2. R\n",
+    "3. SQL\n",
+    "4. Java\n",
+    "5. Julia\n",
+    "6. Scala"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f52c8300-d5e8-40ba-adf5-d11da46a1c8d",
    "metadata": {},
    "source": [
     "**Objectives:**\n",
     "\n",
     "- List popular languages for Data Science\n",
-    "- Understand how to evaluate arithmetic expressions in Python and R\n",
-    "- Learn how to insert comments in code for better readability\n",
-    "- Practice simple arithmetic operations like multiplication and addition"
+    "- Understand key libraries used in Data Science\n",
+    "- Explore the different tools and environments for Data Science\n",
+    "- Learn about the importance of data transformation and integration\n",
+    "- Discover how to work with data visualization techniques"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "89b7da4b-633c-4a04-a11e-b1fc944d92e4",
+   "id": "559674e2-2d9c-4f37-9724-04a8389bc063",
    "metadata": {},
    "source": [
-    "Some of the popular languages that Data Scientists use are: 1) R 2) Python 3) SQL"
+    "Some of the commonly used libraries used by Data Scientists include:\n",
+    "1. Pandas\n",
+    "2. Numpy\n",
+    "3. Matplotlib\n",
+    "4. SciPy\n",
+    "5. Scikit-learn\n",
+    "6. TensorFlow"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "79d476a2-65d3-4337-be39-d50457961b15",
+   "id": "6115da6c-1e69-4fe2-a900-1447f264320f",
    "metadata": {},
    "source": [
-    "Some Commonly used libraries by Data Scientists are 1) Pandas 2) NumPy 3) Matplotlib 4) Scikit-learn"
+    "| Data Science Tools |\n",
+    "|--------------------|\n",
+    "| Jupyter Notebook   |\n",
+    "| RStudio            |\n",
+    "| Apache Zeppelin    |"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1d122ce7-d33a-43d9-8dbd-e3aad34b3b38",
+   "id": "09c8446b-270c-4299-a747-42488d37a243",
    "metadata": {},
    "source": [
-    "Data Science Tools\n",
-    "1) Jupyter Notebook\n",
-    "2) RStudio\n",
-    "3) Apache Spark"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c173a5eb-3594-4240-ae24-a8eb73406289",
-   "metadata": {},
-   "source": [
-    "Below are examples of evaluating arithmetic expressions in Python\n",
-    "-'5+3' evaluates to '8'\n",
-    "-'10+4' evaluates to '14'\n",
-    "-'6*10' evaluates to '60'\n",
-    "-'10/5' evaluates to '2'"
+    "### Below are a few examples of evaluating arithmetic expressions in Python\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d9e1e7e4-327d-4b55-9caf-fcd0df281324",
+   "id": "3419c828-1817-4f33-ba13-3879f08ef632",
    "metadata": {},
    "outputs": [
     {
@@ -83,17 +93,15 @@
     }
    ],
    "source": [
-    "# This is a simple arithmetic expression to multiply then add integers\n",
+    "#This a simple arithmetic expression to mutiply then add integers\n",
     "result <- (3 * 4) + 5\n",
-    "\n",
-    "# Printing the result\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "27f0d507-18c0-42ac-96b8-2bc741e1f232",
+   "execution_count": 2,
+   "id": "4a60a080-4e74-4e03-9cf5-c36591985959",
    "metadata": {},
    "outputs": [
     {
@@ -113,11 +121,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b09ec4b6-669c-48ea-ad1f-ef594ee28692",
+   "id": "469167aa-c15e-4ada-93ef-b6dd881ddaf9",
    "metadata": {},
    "source": [
     "## Author\n",
-    "\n",
     "Joel Hall"
    ]
   }
